# examples

./: .gitignore  README.md  wallet.json
EVM-GMP-RNG/: README.md
EVM-GMP-RNG/polygon/: hardhat.config.js  package-lock.json  package.json
EVM-GMP-RNG/polygon/artifacts/@axelar-network/axelar-gmp-sdk-solidity/contracts/executable/AxelarExecutable.sol/: AxelarExecutable.dbg.json  AxelarExecutable.json
EVM-GMP-RNG/polygon/artifacts/@axelar-network/axelar-gmp-sdk-solidity/contracts/interfaces/IAxelarGasService.sol/: IAxelarGasService.dbg.json
EVM-GMP-RNG/polygon/artifacts/@axelar-network/axelar-gmp-sdk-solidity/contracts/utils/AddressString.sol/: AddressToString.json  StringToAddress.json
EVM-GMP-RNG/polygon/artifacts/contracts/ReceiveRandom.sol/: ReceiveRandom.dbg.json  ReceiveRandom.json
EVM-GMP-RNG/polygon/cache/: solidity-files-cache.json
EVM-GMP-RNG/polygon/contracts/: ReceiveRandom.sol
EVM-GMP-RNG/polygon/scripts/: queryRandom.js
EVM-GMP-RNG/secret_network/: Cargo.toml
EVM-GMP-RNG/secret_network/node/: execute.js  index.js  package-lock.json  query.js
EVM-GMP-RNG/secret_network/src/: contract.rs  lib.rs  msg.rs  state.rs
EVM-encrypt-decrypt/: README.md
EVM-encrypt-decrypt/polygon/: .env  .gitignore  README.md  package-lock.json
EVM-encrypt-decrypt/polygon/artifacts/@axelar-network/axelar-gmp-sdk-solidity/contracts/executable/AxelarExecutable.sol/: AxelarExecutable.json
EVM-encrypt-decrypt/polygon/artifacts/@axelar-network/axelar-gmp-sdk-solidity/contracts/utils/AddressString.sol/: AddressToString.dbg.json  StringToAddress.json
EVM-encrypt-decrypt/polygon/artifacts/contracts/SendReceiveEncrypt.sol/: SendReceiveEncrypt.dbg.json  SendReceiveEncrypt.json
EVM-encrypt-decrypt/polygon/cache/: solidity-files-cache.json
EVM-encrypt-decrypt/polygon/contracts/: SendReceiveEncrypt.sol
EVM-encrypt-decrypt/polygon/scripts/: deploy.js  encrypt.js
EVM-encrypt-decrypt/secret_network/: Cargo.toml
EVM-encrypt-decrypt/secret_network/node/: create_keys.js  decrypt.js  ecdh.js  encrypt.js  execute.js  get_keys.js  index.js  package.json  query.js
EVM-encrypt-decrypt/secret_network/src/: contract.rs  lib.rs  main.rs  msg.rs  state.rs
EVM-secretpath-RNG/: .env  hardhat.config.js
EVM-secretpath-RNG/contracts/: RandomnessReceiver.sol
EVM-secretpath-RNG/scripts/: deploy.js  fulfill_randomness_event.js  set_gateway.js
EVM-snakepath-RNG/: .env  README.md  hardhat.config.js  package-lock.json  package.json
EVM-snakepath-RNG/scripts/: query_secret_network.js  request_random.js  set_gateway.js
IBC-wasm-hooks-tutorial/: README.md
IBC-wasm-hooks-tutorial/contracts/ibc-hooks-contract/: .gitignore  Cargo.toml
IBC-wasm-hooks-tutorial/contracts/snip20-reference-impl/node/: .env  index.js  package-lock.json
evm-confidential-voting/polygon/: .env  .gitignore  README.md  hardhat.config.js  package.json
evm-confidential-voting/polygon/cache/: solidity-files-cache.json
evm-confidential-voting/polygon/scripts/: create_proposal.js  decrypt.js  decrypt_tally.js  encrypt.js  query_by_proposal_id.js  query_proposal_votes.js  vote.js
evm-confidential-voting/secret-network/node/: create_keys.js  decrypt.js  decrypt_tally.js  get_keys.js  index.js  query_decrypted_votes.js  query_tallied_votes.js  test.js  test2.js
evm-confidential-voting/voting-frontend/: package-lock.json  package.json
evm-confidential-voting/voting-frontend/src/: App.css  App.js
evm-confidential-voting/voting-frontend/src/components/: createProposal.js  proposalResults.js  proposalsList.js
evm-confidential-voting/voting-frontend/src/functions/: decrypt.js  encrypt.js  query_decrypted_votes.js
node/: index.js
react-millionaire/src/secretJs/: SecretjsContext.js
secret-IBC-setup/: README.md  Wallets.md
secret-IBC-setup/relayer/: a.mnemonic  config.toml  docker-compose.yml
secret-ethereum-gmp/: .gitignore  Cargo.toml  Makefile  README.md
secret-ethereum-gmp/node/: execute.js  index.js  package.json  query.js
secret-ethereum-gmp/src/: contract.rs  errors.rs  msg.rs
secret-ibc-rng-template/: .gitignore  README.md  a.mnemonic  config.toml  gistfile.txt  gm.toml
secret-ibc-rng-template/consumer/: Cargo.toml  Makefile  README.md
secret-ibc-rng-template/consumer-side-proxy/: Cargo.toml  Makefile
secret-ibc-rng-template/consumer-side-proxy/src/: contract.rs  msg.rs  state.rs
secret-ibc-rng-template/consumer/src/: contract.rs  random.rs
secret-ibc-rng-template/node/: index_juno.js  index_secret.js  package-lock.json  package.json  upload_instantiate_secret_proxy.js
secret-ibc-rng-template/proxy/: Cargo.toml
secret-ibc-rng-template/proxy/src/: contract.rs  msg.rs
secret-millionaire/: .gitignore  README.md
secret-millionaire/millionaire-contract/: contract.wasm
secret-millionaire/node/: index.js
secret-millionaire/react-millionaire/: package-lock.json
secret-millionaire/react-millionaire/src/secretJs/: SecretjsFunctions.js
secret-viewing-keys/: .gitignore  README.md
secret-viewing-keys/node/: index.js  package-lock.json
secret-viewing-keys/secret-viewing-keys-contract/: Cargo.toml
secret-viewing-keys/secret-viewing-keys-contract/examples/: schema.rs
secret-viewing-keys/secret-viewing-keys-contract/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
secret-viewing-keys/secret-viewing-keys-contract/src/: contract.rs  msg.rs  state.rs
vrf-Randomness-Tutorial/: .gitignore
vrf-Randomness-Tutorial/node/: index.js
