[package]
name = "secret-ibc-rng-template"
version = "0.1.0"
authors = ["seanrad"]
edition = "2021"
description = "A simple counter contract template for Secret Network"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]
with_floats = []
stargate = []
ibc3 = ["stargate"]

[dependencies]

cosmwasm-std = { version = "1.2.2", features = ["ibc3"] }
cw-storage-plus = "1.0.1"
cosmwasm-schema = "1.1.3"


schemars = "0.8.1"
serde = { version = "1.0.114", default-features = false, features = ["derive"] }

hex = "0.4.3"
serde-json-wasm = "0.5.0"

