[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true


[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["ibc3"] }
cw-storage-plus = "1.2.0"

serde = { version = "1.0.193", default-features = false, features = ["derive"] }
schemars = "0.8.16"
